<resources>
    <string name="appp_name">LoginDesign</string>
    <string name="user_name">UserName</string>
    <string name="form_prenom">Prénom</string>
    <string name="form_poste">Poste</string>
    <string name="form_username">Nom</string>
    <string name="form_email">Email</string>
    <string name="form_phone">Adresse postale</string>
    <string name="form_password">Mot de passe</string>
    <string name="already_signin">Se connecter</string>
    <string name="new_member">New Here ? Sign up instead.</string>
    <string name="nameerror">Enter a valid name</string>
    <string name="emailerror">Enter a valid email</string>
    <string name="mobileerror">Enter a valid mobile</string>
    <string name="passworderror">The password must contain at least 8 character containing, at least one letter and one number</string>
    <string name="app_name">BTSPPE_ANDROID</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="jouer">Jouer</string>
    <string name="entrer_votre_prenom">Entrer votre prenom</string>
    <string name="bienvenue_dans_top_quiz_quel_est_votre_pr_nom">Bienvenue dans TopQuiz. Quel est votre prénom ?</string>
</resources>